Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!


* Verilator 3.891 devel

****  Fix internal error on double-for loop unrolling, bug1044. [Jan Egil Ruud]


* Verilator 3.890 2016-11-25

***   Honor --output-split on coverage constructors, bug1098. [Johan Bjork]

****  Fix various issues when making outside of the kit.

****  Fix flex 2.6.2 bug, bug1103. [Sergey Kvachonok]

****  Fix error on bad interface name, bug1097. [Todd Strader]

****  Fix error on referencing variable in parent, bug1099. [Ian Thompson]

****  Fix type parameters with low optimization, bug1101. [Stefan Wallentowitz]


* Verilator 3.888 2016-10-14

**    Support foreach, bug1078. [Xuan Guo]

***   Add --no-decoration to remove output comments, msg2015. [Frederic Requin]

***   If VM_PARALLEL_BUILDS=1, use OPT_FAST and OPT_SLOW. [Frederic Requin]
      Set VM_DEFAULT_RULES=0 for old behavior.

****  Add error on DPI functions > 32 bits, msg1995. [Elliot Mednick]

****  Fix SystemC compiles with VPI, bug1081. [Arthur Kahlich]

****  Fix error on wide numbers that represent shifts, msg1991, bug1088. [Mandy Xu]

****  Improve Verilation performance on internal strings, msg1975. [Johan Bjork]

****  Improve Verilation performance on trace duplicates, bug1090. [Johan Bjork]


* Verilator 3.886 2016-07-30

****  Fix enum values of 11-16 bits wide using .next/.prev, bug1062. [Brian Flachs]

****  Fix false warnings on non-power-2 enums using .next/.prev.

****  Fix comparison of unpacked arrays, bug1071. [Andrew Bardsley]

****  Fix compiler warning in GCC 6. [David Horton]


* Verilator 3.884 2016-05-18

**    Support parameter type, bug376. [Alan Hunter, et al]

**    Support command-line -G/+pvalue param overrides, bug1045. [Stefan Wallentowitz]

***   The default l2 scope name is now the same as the top-level module, bug1050.
      Use "--l2-name v" for the historical behavior.

***   Add --l2-name option for controlling "v" naming.
