@@ -7,6 +7,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix internal error on double-for loop unrolling, bug1044. [Jan Egil Ruud]
 
+****  Fix internal error on unique casez with --assert, bug1117. [Enzo Chi]
+
 
 * Verilator 3.890 2016-11-25
 
